--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,7 @@
 events{}
 http {
-    limit_conn_zone $binary_remote_addr zone=host:10m;
+    #limit_conn_zone $binary_remote_addr zone=host:10m;
+    limit_conn_zone $http_host zone=host:10m;
     server {
         location / {
             limit_conn host 1;
