--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3"
 services:
   web:
-    image: nginx
+    image: openresty/openresty:buster-fat #nginx
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./conf.d:/etc/nginx/conf.d #nginx.conf:/etc/nginx/nginx.conf
     ports:
       - "8081:80"
   backend:
@@ -14,4 +14,4 @@ services:
     image: tutum/curl
     depends_on:
       - web
-    entrypoint: ["curl", "-H Host:test", "web:80/"]
+    entrypoint: ["curl", "-sq", "-H Host:test", "web:80/"]
