--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,16 @@
+load_module modules/ndk_http_module.so;
+load_module modules/ngx_http_lua_module.so;
 events{}
 http {
-    limit_conn_zone $binary_remote_addr zone=host:10m;
+    upstream my_back {
+        server backend:8080;
+    }
+    limit_conn_zone $http_host zone=host:10m;
+    #limit_conn_zone $binary_remote_addr zone=host:10m;
     server {
         location / {
             limit_conn host 1;
-            proxy_pass http://backend:8080/;
+            proxy_pass http://my_back/;
         }
     }
 }
